--- a/views/css/style.css
+++ b/views/css/style.css
@@ -25,6 +25,10 @@ div#left-menu
 {
     margin: 5px;
 }
+#top-nav a:hover
+{
+    text-decoration: none;
+}
 #left-menu::-webkit-scrollbar {
     -webkit-appearance: none;
     width: 4px;
@@ -40,6 +44,12 @@ div#main-content
     border-radius: 5px;
     background-color: rgba(220,220,220,0.2);
     min-height: 400px;
+    padding: 1em;
+}
+div#main-content a
+{
+    word-wrap: break-word;
+    font-size: small;
 }
 #nav
 {
